--- a/FramerMotionTraining/nextjs-blog/package.json
+++ b/FramerMotionTraining/nextjs-blog/package.json
@@ -1,23 +1,26 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "date-fns": "^2.11.1",
-    "framer-motion": "^6.2.9",
-    "gray-matter": "^4.0.2",
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.1",
-    "typescript": "^4.6.3"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+        "check-types": "tsc --build"
+    },
+    "dependencies": {
+        "date-fns": "^2.11.1",
+        "framer-motion": "^6.2.9",
+        "gray-matter": "^4.0.2",
+        "next": "latest",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "remark": "^14.0.1",
+        "remark-html": "^15.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^17.0.23",
+        "@types/react": "^18.0.1",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.3"
+    }
 }
